Build flipcard component

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,12 @@
     <title>Frontend Mentor | Launch countdown timer</title>
   </head>
   <body>
-    We're launching soon Days Hours Minutes Seconds
+    <main>
+      <div class="flipcard">
+        <div class="flipcard__top">6</div>
+        <div class="flipcard__bottom">6</div>
+      </div>
+    </main>
 
     <div class="attribution">
       Challenge by
