--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
     <main>
       <div class="flipcard">
         <div class="flipcard__top">6</div>
+        <!-- <div class="top-flip">6</div> -->
         <div class="flipcard__bottom">6</div>
+        <!-- <div class="bottom-flip">6</div> -->
       </div>
     </main>
 
