Use js to flip card

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,15 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/script.js"></script>
 
     <title>Frontend Mentor | Launch countdown timer</title>
   </head>
   <body>
     <main>
       <div class="flipcard">
-        <div class="flipcard__top">6</div>
-        <!-- <div class="top-flip">6</div> -->
-        <div class="flipcard__bottom">6</div>
-        <!-- <div class="bottom-flip">6</div> -->
+        <div class="flipcard__top">9</div>
+        <div class="flipcard__bottom">9</div>
       </div>
     </main>
 
