Basic layout of countdown timer

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,35 @@
     <title>Frontend Mentor | Launch countdown timer</title>
   </head>
   <body>
-    <main>
-      <div class="flipcard">
-        <div class="flipcard__top">9</div>
-        <div class="flipcard__bottom">9</div>
+    <header><h1>We're launching soon</h1></header>
+    <main class="timer container">
+      <div class="timer__segment">
+        <h2>Days</h2>
+        <div class="flipcard">
+          <div class="flipcard__top">99</div>
+          <div class="flipcard__bottom">99</div>
+        </div>
+      </div>
+      <div class="timer__segment">
+        <h2>Hours</h2>
+        <div class="flipcard">
+          <div class="flipcard__top">99</div>
+          <div class="flipcard__bottom">99</div>
+        </div>
+      </div>
+      <div class="timer__segment">
+        <h2>Minutes</h2>
+        <div class="flipcard">
+          <div class="flipcard__top">99</div>
+          <div class="flipcard__bottom">99</div>
+        </div>
+      </div>
+      <div class="timer__segment">
+        <h2>Seconds</h2>
+        <div class="flipcard">
+          <div class="flipcard__top">99</div>
+          <div class="flipcard__bottom">99</div>
+        </div>
       </div>
     </main>
 
