Start countdown using js

--- a/src/index.html
+++ b/src/index.html
@@ -21,30 +21,30 @@
     <main class="timer container">
       <div class="timer__segment">
         <h2>Days</h2>
-        <div class="flipcard">
-          <div class="flipcard__top">99</div>
-          <div class="flipcard__bottom">99</div>
+        <div class="flipcard" data-days>
+          <div class="flipcard__top">24</div>
+          <div class="flipcard__bottom">24</div>
         </div>
       </div>
       <div class="timer__segment">
         <h2>Hours</h2>
-        <div class="flipcard">
-          <div class="flipcard__top">99</div>
-          <div class="flipcard__bottom">99</div>
+        <div class="flipcard" data-hours>
+          <div class="flipcard__top">00</div>
+          <div class="flipcard__bottom">00</div>
         </div>
       </div>
       <div class="timer__segment">
         <h2>Minutes</h2>
-        <div class="flipcard">
-          <div class="flipcard__top">99</div>
-          <div class="flipcard__bottom">99</div>
+        <div class="flipcard" data-minutes>
+          <div class="flipcard__top">00</div>
+          <div class="flipcard__bottom">00</div>
         </div>
       </div>
       <div class="timer__segment">
         <h2>Seconds</h2>
-        <div class="flipcard">
-          <div class="flipcard__top">99</div>
-          <div class="flipcard__bottom">99</div>
+        <div class="flipcard" data-seconds>
+          <div class="flipcard__top">00</div>
+          <div class="flipcard__bottom">00</div>
         </div>
       </div>
     </main>
