--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
       <div class="timer__segment">
         <h2>Days</h2>
         <div class="flipcard" data-days>
-          <div class="flipcard__top">24</div>
-          <div class="flipcard__bottom">24</div>
+          <div class="flipcard__top">14</div>
+          <div class="flipcard__bottom">14</div>
         </div>
       </div>
       <div class="timer__segment">
@@ -98,7 +98,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://charmainelhm.netlify.app/" target="_blank"
+          >Charmaine Lee</a
+        >.
       </div>
     </footer>
   </body>
